--- a/ElmishStyle/ElmishStyle.fsproj
+++ b/ElmishStyle/ElmishStyle.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="RingBuffer.fs" />
         <Compile Include="ElmishProgram.fs" />
         <Compile Include="LibraryElmish.fs" />
+        <Compile Include="LibraryElmishCopy.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
