need add test before 20pm

--- a/ElmishStyle/ElmishStyle.fsproj
+++ b/ElmishStyle/ElmishStyle.fsproj
@@ -18,6 +18,10 @@
       <PackageReference Include="FSharpx.Collections" Version="2.0.0" />
       <PackageReference Include="FSharpx.Collections.Experimental" Version="2.0.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="Tests\LibraryElmishTests.fs" />
+    </ItemGroup>
     
 
 </Project>
