--- a/ElmishStyle/ElmishStyle.fsproj
+++ b/ElmishStyle/ElmishStyle.fsproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FsCheck" Version="3.0.0-alpha4" />
       <PackageReference Include="FSharpx.Collections" Version="2.0.0" />
       <PackageReference Include="FSharpx.Collections.Experimental" Version="2.0.0" />
     </ItemGroup>
